# Production-GenAI-MLOps-Platform

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  cd-check.yml  cd-local-copy.yml  docker-compose.yml  eval_results.json  pyproject.toml  requirements.txt  review_bundle.txt  structure.txt
.github/workflows/: cd.yml  ci.yml  deploy.yml  rollback.yml  terraform.yml
app/: config.py  logging_config.py  main.py
app/models/: requests.py  responses.py
app/observability/: __init__.py  cost_calculator.py  langfuse_client.py  metrics.py
app/services/: llm_service.py
evals/: README.md
evals/configs/: promptfooconfig.yaml
evals/datasets/: azure.yaml  coding.yaml  edge_cases.yaml  general.yaml  golden_dataset.yaml  reasoning.yaml  safety.yaml
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ui.tsx
frontend/data/: dashboard.ts
frontend/lib/: api.ts
infra/: .gitignore  main.bicep  main.json
infra/modules/: acr.bicep  app-insights.bicep  container-app.bicep  container-app.json  container-apps-env.bicep  key-vault.bicep  log-analytics.bicep
infra/parameters/: production.bicepparam  staging.bicepparam
infra/terraform/: acr.tf  app_insights.tf  backend.tf  container_app.tf  container_app_environment.tf  containerapp.json  log_analytics.tf  main.tf  managed_identity.tf  outputs.tf  resource_group.tf  role_assignments.tf  variables.tf  (+1 more)
scripts/: smoke_test.py
tests/: conftest.py  test_chat.py  test_cost_calculator.py  test_groq_provider.py  test_health.py  test_observability.py
(+16 files in other folders)
